test/invalid/if_in_class_body.py
class Base:
    print(1)